tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_deny_capturing_mut_variable_without_reference_in_lambda/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Mutable variable x captured in lambda must be a mutable reference
  ┌─ src/main.nr:5:13
  │
5 │             x += 2;
  │             - Use '&mut' instead of 'mut' to capture a mutable variable.
  │

Aborting due to 1 previous error
